@@ -4,6 +4,8 @@
 
 2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* site/download/index.html (href): update RH planetccrma listing.
+
 	* site/index.html (different): ms manners iso. miss manners
 
 2003-08-11  Graham Percival  <gperlist@shaw.ca>
